--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ node_modules
 package-lock.json
 
 output
+
+node_modules/puppeteer/.local-chromium/mac-706915/chrome-mac/Chromium.app/Contents/Frameworks/Chromium-Framework.framework/Versions/79.0.3945.0/Chromium-Framework
